# ai-picture-book

./: .gitignore  Makefile  README.md
.github/workflows/: python.yml
app/: README.md
app/api/: Makefile  pyproject.toml
app/api/ai_picture_book/: main.py  mistral.py
app/api/ai_picture_book/test/: main_test.py
app/api/test/: main_test.py
app/ui/picture_book/: Makefile  README.md  pubspec.yaml
app/ui/picture_book/android/app/: build.gradle
app/ui/picture_book/android/app/src/main/: AndroidManifest.xml
app/ui/picture_book/ios/Runner.xcodeproj/: project.pbxproj
app/ui/picture_book/lib/: main.dart  ping.dart  utils.dart
app/ui/picture_book/linux/: CMakeLists.txt  my_application.cc
app/ui/picture_book/macos/Runner.xcodeproj/: project.pbxproj
app/ui/picture_book/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/ui/picture_book/macos/Runner/Configs/: AppInfo.xcconfig
app/ui/picture_book/web/: index.html  manifest.json
app/ui/picture_book/windows/: CMakeLists.txt
app/ui/picture_book/windows/runner/: Runner.rc
research/flutter/: README.md
research/flutter/sample_app/lib/: main.dart
research/langchain/: main.py  pyproject.toml
research/langchain/open_ai/chat/: main.py
research/langchain/open_ai/dall_e/: dalle_image_generator.ipynb  main.py
