[tool.poetry]
name = "ai-picture-book-api"
version = "0.1.0"
description = "AI Picture Book API"
authors = ["Andrew Jarombek <andrew@jarombek.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
langchain = "0.0.341"
openai = "1.3.5"
python-dotenv = "1.0.0"

[tool.poetry.dev-dependencies]
black = "23.11.0"
pytest = "7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
target-version = ["py311"]
