[tool.poetry]
name = "ai_picture_book"
version = "0.1.0"
description = "AI Picture Book API"
authors = ["Andrew Jarombek <andrew@jarombek.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.105.0"
langchain = "0.0.350"
openai = "1.3.9"
python-dotenv = "1.0.0"
uvicorn = "0.24.0.post1"
transformers = "^4.36.2"

[tool.poetry.dev-dependencies]
black = "23.12.0"
pytest = "7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
target-version = ["py311"]
