[tool.poetry]
name = "ai_picture_book"
version = "0.1.0"
description = "AI Picture Book API"
authors = ["Andrew Jarombek <andrew@jarombek.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.109.0"
langchain = "0.1.1"
langchain-openai = "0.0.2.post1"
openai = "1.8.0"
python-dotenv = "1.0.0"
uvicorn = "0.26.0"
transformers = "4.36.2"

[tool.poetry.dev-dependencies]
black = "23.12.1"
pytest = "7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
target-version = ["py312"]
